fix width post-picture on small screen

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -282,10 +282,20 @@ section img {
     font-size: 75%;
 }
 
+.post-picture {
+  max-width: 20rem;
+}
+
+
 @media (max-width: 425px) {
    .about-photo {
        width: 400px;
    }
+
+   .post-picture {
+       max-width: 100%;
+  }
+
 }
 
 .videoWrapper {
@@ -300,8 +310,4 @@ section img {
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-.post-picture {
-  max-width: 20rem;
 }
